--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,9 @@ spring:
   cache:
     jcache:
       config: classpath:ehcache.xml
+  #Zipkin
+  zipkin:
+    enabled: false
 #ActiveMQ
 active-mq:
   broker-url: tcp://localhost:61616
