:sparkles: testing eureka on docker

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
       config: classpath:ehcache.xml
   #Zipkin
   zipkin:
-    enabled: false
+    baseUrl: http://localhost:9411/
 #ActiveMQ
 active-mq:
   broker-url: tcp://localhost:61616
@@ -43,7 +43,7 @@ logging:
 #Exceptions
 visit:
   success: The operation was successful.
-  prefix: 'API-VIST:'
+  prefix: 'VISIT'
   error:
     general: There was an unexpected error. Please try again.
 log4j:
@@ -51,3 +51,8 @@ log4j:
     org:
       apache:
         activemq: DEBUG
+#Eureka
+eureka:
+  client:
+    service-url:
+      defaultZone: http://netflix:eureka@localhost:8761/eureka
