--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,11 +25,45 @@ spring:
   #Zipkin
   zipkin:
     baseUrl: http://localhost:9411/
-#ActiveMQ
-active-mq:
-  broker-url: tcp://localhost:61616
-  user: admin
-  password: admin
+  #ActiveMQ
+  activemq:
+    broker-url: tcp://localhost:61616
+    user: admin
+    password: admin
+    packages:
+      trust-all: false
+      trusted: com.mdrsolutions.SpringJmsExample
+    pool:
+      block-if-full: true
+      block-if-full-timeout: -1
+      create-connection-on-startup: true
+      enabled: false
+      expiry-timeout: 0
+      idle-timeout: 30000
+      max-connections: 1
+      maximum-active-session-per-connection: 500
+      reconnect-on-exception: true
+      time-between-expiration-check: -1
+      use-anonymous-producers: true
+      # Spring JMS Settings
+    jms:
+      listener:
+        acknowledge-mode: auto
+        auto-startup: true
+        concurrency: 5
+        max-concurrency: 10
+      pub-sub-domain: false
+      template:
+        default-destination:
+        delivery-mode: non_persistent
+        priority: 100
+        qos-enabled: true
+        receive-timeout: 1000
+        time-to-live: 36000
+  sleuth:
+    messaging:
+      jms:
+        enabled: false
 #General configuration
 server:
   port: 8108
