:sparkles: Error messages

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -70,16 +70,13 @@ server:
   servlet:
     context-path: /asu/v1/visit
 #Logging
-logging:
-  level:
-    ingjulianvega:
-      ximic: DEBUG
+#logging:
+#  level:
+#    ingjulianvega:
+#      ximic: DEBUG
 #Exceptions
 visit:
-  success: The operation was successful.
-  prefix: 'VISIT'
-  error:
-    general: There was an unexpected error. Please try again.
+  api: @artifactId@
 log4j:
   logger:
     org:
